Corrects navigation item spacing to permit visible focus rectangles

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -55,19 +55,17 @@ code {
   overflow-x: hidden;
   min-width: 14rem;
   padding-right: 1px;
+  padding-left: 1px;
+  padding-bottom: 1px;
 }
 
-.nav-list:nth-of-type(1) {
-  padding: 1px;
-}
-.nav-list .nav-list-item .nav-list-expander {
-  right: 1px;
+nav#site-nav > .nav-list:nth-of-type(1) {
+  padding-top: 2px;
 }
 
 .nav-category {
   text-align: start;
   display: block;
-  margin-left: -1px;
 }
 
 .main-content {
